2009-02-12  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* include/footer.php, general/links_menu.php: _new is invalid. Use _blank 

	* include/config_process.php: Updated error texts for better English
	
	* include/calendar.php: Removed since nobody uses it anymore
	
	* include/functions.php: Modified process_page_header to not load
	wz_jsgraphics by default (it's too heavy and hardly used). Deprecated
	no_permission and unmanaged_error (since they're not used)
	
	* include/styles/timeentry.css, include/styles/pandora.css, 
	include/styles/ie.css: Merged these styles together so there is no extra
	query for 2 css classes
	
	* operation/reporting/reporting_viewer.php: Removed comparison since
	time comes from the client and if the clock is a bit off it gives error.
	Also removed reference to timeentry.css
	
	* godmode/alerts/alert_list.php: Uses new method to load css and jquery
	which prevents error of <link> tags being in body
	
	* godmode/agentes/planned_downtime.php: Removed timeentry reference and 
	fixed HTML in between.

2009-02-12  Esteban Sanchez  <estebans@artica.es>

	* include/javascript/jquery.tablesorter.js,
	include/javascript/jquery.tablesorter.pager.js: Added to repository.
	Missing files for compound alerts editor.

2009-02-12  Esteban Sanchez  <estebans@artica.es>

	* godmode/alerts/configure_alert_compound.php: Added support to
	update alert elements. Also default operator for first element is NOP.

	* include/functions_alerts.php: Added delete_alert_compound_elements().

2009-02-11  Sancho Lerena  <slerena@artica.es>

	* pandoradb_migrate_20_to_21.sql: Fixed typo.

2009-02-11  Esteban Sanchez  <estebans@artica.es>

	* general/main_menu.php, include/styles/menu.css: Selected menu style
	is done with a CSS classs. Slide effect removed. Submenus have now
	white background.

	* godmode/agentes/alert_manager.php: Allow creation of alerts without
	actions which have sense in compound alerts.
