@@ -54,14 +54,18 @@ if (isset ($_GET["agentmodule"]) && isset ($_GET["agent"]) ){
 		$to_date = $_GET["to_date"];
 	else
 		$to_date = $now;
-	
+
+	// Convert to unix date	
+	$from_date = date("U", strtotime($from_date));
+	$to_date = date("U", strtotime($to_date));
+
 	// Make the query
 	$sql1="SELECT * FROM tdatos WHERE id_agente = $id_agent AND id_agente_modulo = $id_agentmodule";
 	$tipo = get_moduletype_name (get_agentmodule_type ($id_agentmodule));
 	if ($tipo == "generic_data_string")
-		$sql1='SELECT * FROM tagente_datos_string WHERE timestamp > "'.$from_date.'" AND timestamp < "'.$to_date.'" AND id_agente_modulo ='.$id_agentmodule.' ORDER BY timestamp DESC';
+		$sql1 = "SELECT * FROM tagente_datos_string WHERE utimestamp > $from_date AND utimestamp < $to_date AND id_agente_modulo = $id_agentmodule ORDER BY utimestamp DESC";
 	else
-		$sql1='SELECT * FROM tagente_datos WHERE timestamp > "'.$from_date.'" AND timestamp < "'.$to_date.'" AND id_agente_modulo ='.$id_agentmodule.' ORDER BY timestamp DESC';
+		$sql1 = "SELECT * FROM tagente_datos WHERE utimestamp > $from_date AND utimestamp < $to_date AND id_agente_modulo = $id_agentmodule ORDER BY utimestamp DESC";
 	$result1=mysql_query($sql1);
 	
 	// Render data
@@ -70,7 +74,7 @@ if (isset ($_GET["agentmodule"]) && isset ($_GET["agent"]) ){
 		echo ",";
 		echo $row["datos"];
 		echo ",";
-		echo $row["timestamp"];
+		echo $row["utimestamp"];
 		echo chr(13);
 	}
 }
